# reddit-client-gtk

./: .gitignore  Cargo.toml  README.md  build.rs  flatpak-build.sh  flatpak-package.sh  flatpak-setup.sh  flatpak-test.sh  org.johan.RedditClient.json
resources/: layout.glade  resources.gresource  resources.xml  style.css
resources/css/: app.css
resources/ui/: comments.ui  main_window.ui  subreddit.ui  webview.ui
src/: globals.rs  main.rs  static_resources.rs  ui_builder.rs
src/app/: backend_loop.rs  command.rs  connect_ui.rs  mod.rs
src/appop/: comments.rs  mod.rs  state.rs  subreddit.rs  webview.rs
src/widgets/: comment.rs  comment_list.rs  mod.rs  post.rs
