[package]
name = "reddit-client-gtk-rs"
version = "0.1.0"
authors = ["Johan Bjäreholt <johan@bjareho.lt>", "Neil Simpson <neilsimp1@gmail.com>"]
edition = "2018"

[dependencies]
redditor = { git = "https://github.com/johan-bjareholt/redditor.git" }
webkit2gtk = "0.10.0"
gio = "0.9.0"
glib = "0.10.1"
gdk = "0.13.0"
pango = "0.9.1"

[dependencies.gtk]
version = "0.9.1"
features = ["v3_16"]
